--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
     grid-column: 1/-1;
 }
 
-.item:not(:nth-child(1)) {
+.item:not(:nth-child(1)),#equal {
     background-color: rgb(236, 236, 236);
     user-select: none;
     display: flex;
@@ -43,27 +43,29 @@ input {
     outline: none;
     height: 4rem;
     font-size: 2rem;
-    padding: 0.5rem 0;
+    padding: 0.5rem 1rem;
     text-align: right;
     border-radius: 4px;
     border: 1px solid rgb(0, 0, 0);
 }
-#clean {
+
+.clean {
     grid-column: 3/1;
 }
 
-#clean, #equal {
-    background-color:#059dee;
-}
 .back {
     grid-column: 3/-1;
 }
 
-#equal {
+.equal {
     grid-column: 4;
     grid-row: 6/8;
 }
 
-#zero {
+.zero {
     grid-column:1/3;
+}
+
+#clean, #equal {
+    background-color:#059dee;
 }
